<resources>
    <string name="app_name">ChatApp</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="connected">Connected</string>

    <!--SIGNUP ACTIVITY-->
    <string name="link_signin">Already a member? Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="your_email">your email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email_validate_error">This is not an email</string>
    <string name="empty_email_validate_error">Email field is empty</string>
    <string name="password_validate_error">At least 3 characters</string>
    <string name="confirm_password_validate_error">Confirm password must be same password</string>
    <string name="signup_successfully">Creating account successfully!</string>
    <string name="signup_failed">Creating account failed! Please try again</string>

    <string name="connected_state">Already connect to internet</string>
    <string name="unconnected_state">Unable connect to internet</string>
    <string name="connected_by_wifi">You are connecting by wifi</string>
    <string name="connected_by_mobile_data">You are connecting by mobile data. Be ware!</string>
    <string name="connected_by_ethernet">You are connecting by ethernet</string>
    <string name="connected_by_wimax">You are connecting by wimax</string>

    <!--SIGNIN ACTIVITY-->
    <string name="button_signin">SIGNIN</string>
    <string name="link_signup">No account yet? Create one</string>
    <string name="link_forgot_password">Forgot password?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="guide_forgot_password_manual">Please enter your email below. We will send new password to your inbox.</string>
    <string name="button_send">SEND</string>
    <string name="checkbox_show_password">Show password</string>
    <string name="progressing_notice_signin">Login...</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
