<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".ui.start.signin.SigninActivity"
    android:paddingTop="25dip" android:paddingBottom="25dip"
    android:background="@color/blue_400">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connectionState_signin"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:paddingTop="5dip" android:paddingBottom="5dip"
            android:textColor="@android:color/white" android:textSize="15sp"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:paddingStart="25dip" android:paddingEnd="25dip">

            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@drawable/ic_welcome"/>

            <android.support.design.widget.TextInputLayout
                android:theme="@style/EditTextHint"
                android:layout_marginTop="20dip"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailField"
                    android:paddingStart="5dip"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email" android:textColorHint="@android:color/white"
                    style="@style/FieldSignupStyle"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawablePadding="15dip"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dip"
                android:theme="@style/EditTextHint"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/FieldSignupStyle"
                    android:hint="Password" android:textColorHint="@android:color/white"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="15dip"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/showPassword_chk_signinAct"
                style="@style/ShowPasswordChk_Signin"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:checked="false"
                android:text="@string/checkbox_show_password"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_marginTop="20dip"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@drawable/signin_button"
                android:textSize="18sp" android:textColor="@android:color/white"
                android:text="@string/button_signin" android:gravity="center"/>

            <LinearLayout
                android:id="@+id/progress_bar_activity_signin"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dip" android:visibility="gone">

                <ProgressBar
                    android:layout_width="50dip" android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/custom_signin_wheel"/>

                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white" android:textSize="18sp"
                    android:text="@string/progressing_notice_signin"/>

            </LinearLayout>

            <TextView
                android:id="@+id/signupLink"
                android:layout_marginTop="30dip"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp" android:textColor="@android:color/white"
                android:text="@string/link_signup"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_marginTop="20dip"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp" android:textColor="@android:color/white"
                android:text="@string/link_forgot_password"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
